--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.0.3",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
-    "rate-limiter-flexible": "^2.4.2"
+    "rate-limiter-flexible": "^2.4.2",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
